# squarecloud-rs

./: .env.test.example  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: audit.yaml  general.yaml
examples/: error_handling.rs  me.rs  service_status.rs  upload_app.rs
examples/apps/: all_apps_status.rs  commit.rs  delete.rs  dns_record.rs  domain_analytics.rs  info.rs  load_balancers.rs  logs.rs  metrics.rs  network_errors.rs  network_logs.rs  network_performance.rs  purge_cache.rs  realtime.rs  realtime_logs.rs  restart.rs  set_custom_domain.rs  start.rs  status.rs  stop.rs
examples/blob/: delete.rs  list.rs  stats.rs  upload.rs
examples/database/: all_databases_status.rs  create_database.rs  create_snapshot.rs  database_info.rs  database_metrics.rs  database_status.rs  delete_database.rs  edit_database.rs  get_certificate.rs  list_snapshots.rs  redefine_credential.rs  restore_snapshot.rs  start_database.rs  stop_database.rs
examples/deployments/: current_deploy.rs  list_deploys.rs  set_webhook_integration.rs
examples/env/: delete_envs.rs  list_envs.rs  overwrite_envs.rs  upsert_envs.rs
examples/files/: delete_file.rs  list_files.rs  move_file.rs  read_file.rs  write_file.rs
examples/snapshots/: create_snapshot.rs  list_snapshots.rs  restore_snapshot.rs
examples/workspaces/: all_workspaces.rs  change_member_permissions.rs  create_workspace.rs  delete_workspace.rs  get_invite_code.rs  get_workspace.rs  invite_member.rs  leave_workspace.rs  remove_member.rs
src/: lib.rs  settings.rs  utils.rs
src/http/: #http_client.rs#  errors.rs  http_client.rs  mod.rs
src/http/endpoints/: blob.rs  mod.rs  service.rs  types.rs  users.rs
src/http/endpoints/apps/: deploys.rs  envs.rs  files.rs  mod.rs  network.rs  snapshots.rs
src/http/endpoints/databases/: credentials.rs  mod.rs  snapshots.rs
src/http/endpoints/workspaces/: applications.rs  members.rs  mod.rs
src/http/errors/: code.rs  mod.rs
src/http/errors/domains/: account.rs  app.rs  blob.rs  database.rs  deploy.rs  env.rs  file.rs  member.rs  mod.rs  network.rs  service.rs  snapshot.rs  upload.rs  workspace.rs
src/resources/: app.rs  database.rs  file.rs  mod.rs  snapshot.rs  workspace.rs
src/resources/app/: deploy.rs  env.rs  file.rs  mod.rs  network.rs  resource.rs  snaphots.rs
src/resources/blob/: mod.rs  resource.rs
src/resources/database/: credentials.rs  mod.rs  resource.rs  snapshots.rs
src/resources/workspace/: applications.rs  members.rs  mod.rs  resource.rs
src/types/: account_info.rs  analytics.rs  app.rs  blob.rs  config_file.rs  database.rs  database_metrics.rs  database_status.rs  deploy.rs  dns_record.rs  env.rs  file.rs  mod.rs  network.rs  plan.rs  realtime.rs  service.rs  snapshot.rs  stats.rs  workspace.rs
tests/contract/: #endpoints.rs#  endpoints.rs  error_codes.rs  mod.rs  schemas.rs  validation.rs
tests/integration/: account.rs  app.rs  blob.rs  client.rs  database.rs  helpers.rs  mod.rs  workspace.rs
tests/mock/: account.rs  app.rs  blob.rs  client.rs  database.rs  mod.rs  workspace.rs
