[package]
name = "squarecloud-rs"
version = "0.1.0"
edition = "2024"
description = "Async Rust client for the SquareCloud API"
license = "MIT"
keywords = ["squarecloud", "api", "async", "http"]
categories = ["api-bindings", "web-programming::http-client"]

[[test]]
name = "integration"
path = "tests/integration/mod.rs"

[[test]]
name = "mock"
path = "tests/mock/mod.rs"

[[test]]
name = "contract"
path = "tests/contract/mod.rs"
required-features = ["test-utils"]

[features]
test-utils = ["dep:inventory"]

[dev-dependencies]
inventory = "0.3"
wiremock = "0.6"

[dependencies]
inventory = { version = "0.3", optional = true }
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
phf = { version = "0.13.1", features = ["macros"] }
reqwest = { version = "0.12.26", features = ["json", "multipart"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
